# index.js
@@ -2,7 +2,7 @@ const express = require('express')
 const swaggerUi = require('swagger-ui-express')
 const swaggerDocument = require('./swagger.json');
 
-var restaurants = [{id:0,name:"Woodshill"},{id:1,name:"Fiorellas"}]
+var airplanes = [{id:0,name:"Cesna"},{id:1,name:"Boeing"}]
 
 const app = express();
 app.use(express.json());
@@ -11,17 +11,17 @@ app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument))
 
 
 
-app.get("/restaurants", (req,res)=>{
-    res.send(restaurants);
+app.get("/airplanes", (req,res)=>{
+    res.send(airplanes);
 })
-app.post("/restaurant",(req,res)=>{
-    restaurants.push({id:req.body.id, name:req.body.name})
-    res.send(`${JSON.stringify(restaurants)} created`)
+app.post("/airplane",(req,res)=>{
+    airplanes.push({id:req.body.id, name:req.body.name})
+    res.send(`${JSON.stringify(airplanes)} created`)
 })
-app.delete("/restaurant/:id", (req,res)=>{
+app.delete("/airpalne/:id", (req,res)=>{
     console.log('delete:id:'+req.params.id)
-    restaurants = restaurants.filter(item=> item.id != req.params.id)
-    res.send("restaurants left:"+JSON.stringify(restaurants));
+    airplanes = airplanes.filter(item=> item.id != req.params.id)
+    res.send("airplanes left:"+JSON.stringify(airplanes));
 })
 
 app.listen(4000,()=>console.log('Listening on 4000'))
