# swagger.json
@@ -2,7 +2,7 @@
     "swagger": "2.0",
     "info": {
         "version": "1.0.0", 
-        "title": "My Restaurant Project CRUD",
+        "title": "My airplane Project CRUD",
         "description": "My User Project Application API",
         "license": {
             "name": "MIT",
@@ -13,7 +13,7 @@
     "basePath": "/",
     "tags": [
         {
-            "name": "Restaurants",
+            "name": "airplanes",
             "description": "API for users in the system"
         }
     ],
@@ -28,31 +28,31 @@
     ],
 
     "paths": {
-        "/restaurants": {
+        "/airplanes": {
             "get": {
-                "tags": ["Restaurants"],
-                "summary": "Get all Restaurants in system",
+                "tags": ["Airpalnes"],
+                "summary": "Get all Airplanes in system",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/Restaurant"
+                            "$ref": "#/definitions/Airplane"
                         }
                     }
                 }
             }
         },
-        "/restaurant": {
+        "/airplane": {
             "post": {
-                "tags": ["Restaurants"],
-                "description": "Create new restaurant in system",
+                "tags": ["Airplanes"],
+                "description": "Create new airplane in system",
                 "parameters": [
                     {
-                        "name": "restaurant",
+                        "name": "airplane",
                         "in": "body",
-                        "description": "Restaurant that we want to create",
+                        "description": "Airplane that we want to create",
                         "schema": {
-                            "$ref": "#/definitions/Restaurant"
+                            "$ref": "#/definitions/Airplane"
                         }
                     }
                 ],
@@ -61,21 +61,21 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "New restaurant is created",
+                        "description": "New airplane is created",
                         "schema": {
-                            "$ref": "#/definitions/Restaurant"
+                            "$ref": "#/definitions/Airplane"
                         }
                     }
                 }
             }
         },
-        "/restaurant/{id}":{
+        "/airplanet/{id}":{
             "parameters":[
                 {
                     "name":"id",
                     "in":"path",
                     "required": true,
-                    "description": "ID of restaurant we want to delete",
+                    "description": "ID of airplane we want to delete",
                     "type":"integer"
                 }
             ],
@@ -85,7 +85,7 @@
         }
     },
     "definitions": {
-        "Restaurant": {
+        "Airplane": {
             "required": ["id","name"],
             "properties": {
                 "id": {
